<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_veripark"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/veripark_logo"/>

        <Button
            android:id="@+id/button_imkb_hisse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btn_imkb_hisse"
            android:background="@color/red" />

        <Button
            android:id="@+id/button_imkb_yukselen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btn_imkb_yukselen"
            android:background="@color/red" />

        <Button
            android:id="@+id/button_imkb_dusen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btn_imkb_dusen"
            android:background="@color/red" />

        <Button
            android:id="@+id/button_imkb_hacim_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btn_imkb_hacim_30"
            android:background="@color/red" />

        <Button
            android:id="@+id/button_imkb_hacim_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btn_imkb_hacim_50"
            android:background="@color/red" />

        <Button
            android:id="@+id/button_imkb_hacim_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btn_imkb_hacim_100"
            android:background="@color/red" />
    </LinearLayout>

</RelativeLayout>